[gd_scene load_steps=8 format=3 uid="uid://iv10hax4y8ri"]

[ext_resource type="Script" uid="uid://dxur0g7ge6cd8" path="res://Scenes/GameFiles/SpawnPoint.gd" id="1_xjnsc"]
[ext_resource type="Texture2D" uid="uid://b35t3viirmu8a" path="res://icon.svg" id="2_kdrch"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xjnsc"]
size = Vector3(1, 0.14, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjnsc"]
albedo_color = Color(1, 0, 1, 1)
emission_enabled = true
emission = Color(6.93083e-06, 0.372097, 0.991556, 1)
shadow_to_opacity = true

[sub_resource type="Animation" id="Animation_kdrch"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xjnsc"]
resource_name = "spin text"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63cj6"]
_data = {
&"RESET": SubResource("Animation_kdrch"),
&"spin text": SubResource("Animation_xjnsc")
}

[node name="SpawnPoint" type="Area3D"]
script = ExtResource("1_xjnsc")
metadata/_custom_type_script = "uid://dxur0g7ge6cd8"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_xjnsc")
debug_color = Color(2.98411e-06, 0.704131, 0.822302, 1)

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
modulate = Color(0.878113, 0.000425091, 0.837065, 1)
transparent = false
texture = ExtResource("2_kdrch")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29147, 0)
modulate = Color(0.723566, 0.000967236, 0.814095, 1)
text = "SPAWN"
font_size = 95
outline_size = 0

[node name="CSGMesh3D" type="CSGBox3D" parent="Label3D"]
transform = Transform3D(0.707107, 0.707107, 0, -0.5, 0.5, 0.707107, 0.5, -0.5, 0.707107, 0, 1.16, 0)
material = SubResource("StandardMaterial3D_xjnsc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_63cj6")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
